--- a/css/Cards.css
+++ b/css/Cards.css
@@ -23,11 +23,7 @@ body {
     text-align: center;
     transition: transform 0.6s;
     transform-style: preserve-3d;
-    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
-    box-shadow:
-      0 0 20px #fff,           
-      -5px 0 10px rgb(0, 17, 255),        
-      5px 0 10px #0ff;       
+    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */   
   }
   
   .flip-card:hover .flip-card-inner {
@@ -44,17 +40,25 @@ body {
   
   .flip-card-front {
         /*THiS BORDER Ayoub*/
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     background-color: rgb(255, 255, 255);
     color: white;
+    box-shadow:
+    0 0 20px 10px #fff,           
+    -5px 0 10px 5px rgba(255, 255, 255, 0.5),        
+    5px 0 10px 5px rgb(255, 255, 255);    
   }
   
   .flip-card-back {
       /*THiS BORDER Ayoub*/
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     background-color: #ffffff;
     color: rgb(0, 0, 0);
     transform: rotateY(180deg);
+    box-shadow:
+    0 0 20px 10px #fff,           
+    -5px 0 10px 5px rgba(255, 255, 255, 0.5),        
+    5px 0 10px 5px rgb(255, 255, 255);    
   }
   #card1{
    
