--- a/css/Cards.css
+++ b/css/Cards.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: black;
+    background-color: #d6d6d6;
 
   }
   #Art{
