--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -8,6 +8,7 @@
     margin-bottom: 20px;
     margin-right: 20px;
     margin-left: 20px;
+    background-color: #ffffff;
 
 }
 .aboutus-card h5
@@ -31,4 +32,5 @@
 {
     height: auto;
     padding: 10px;
+    margin-top: 0px;
 }
