--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,11 @@ z-index: 4;
 width: 100%;
 height: 100%;
 
--webkit-animation: fadeout 2.5s; /* Safari, Chrome and Opera > 12.1 */
-   -moz-animation: fadeout 2.5s; /* Firefox < 16 */
-    -ms-animation: fadeout 2.5s; /* Internet Explorer */
-     -o-animation: fadeout 2.5s; /* Opera < 12.1 */
-        animation: fadeout 2.5s;
+-webkit-animation: fadeout 3s; /* Safari, Chrome and Opera > 12.1 */
+   -moz-animation: fadeout 3s; /* Firefox < 16 */
+    -ms-animation: fadeout 3s; /* Internet Explorer */
+     -o-animation: fadeout 20s; /* Opera < 12.1 */
+        animation: fadeout 3s;
 }
 
 @keyframes fadeout {
@@ -39,7 +39,7 @@ height: 100%;
 
 /* Opera < 12.1 */
 @-o-keyframes fadeout {
-    from { opacity: 0.9; }
+    from { opacity: 1; }
     to   { opacity: 0; }
 }
 #loader img
@@ -53,6 +53,7 @@ body
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     font-family: Roboto;
+    background-color: #d6d6d6;
 }
 /* Header Section */
 header
@@ -67,6 +68,7 @@ header
     background-color: #000000;
     z-index: 3;
 }
+
 .img-container-header
 {
     grid-column: 2/3;
@@ -176,7 +178,7 @@ main
     max-height: 100%;
     min-width: 100%;
     object-fit: cover;
-    opacity: 0.4;
+    opacity: 0.7;
     
 }
 
