--- a/css/Cards.css
+++ b/css/Cards.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: black;
+    background-color: rgb(255, 255, 255);
 
   }
   #Art{
@@ -43,6 +43,7 @@ body {
     border: 1px solid blue;
     background-color: rgb(255, 255, 255);
     color: white;
+    
   }
   
   .flip-card-back {
