--- a/css/style.css
+++ b/css/style.css
@@ -267,41 +267,46 @@ main
 /* Style the tab */
 .tab {
     overflow: hidden;
-    border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    background-color: #111;
     margin-right:auto;
     margin-left: auto;
     margin-top: 30px;
+    border-radius:  20px;
   }
   
   /* Style the buttons inside the tab */
   .tab button {
-    background-color: inherit;
+      width: 50%;
+    color: #999;
+    font-size: 30;
+    background-color:  #111;
+    font-size: 100px;
     float: left;
     border: none;
+    border-radius: 20px;
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
     transition: 0.3s;
-    font-size: 17px;
   }
   
   /* Change background color of buttons on hover */
   .tab button:hover {
-    background-color: #ddd;
+    background-color: darkgrey;
+    color: black;
   }
   
   /* Create an active/current tablink class */
   .tab button.active {
-    background-color: #ccc;
+    background-color:darkgrey;
+    color: black;
+
   }
   
   /* Style the tab content */
   .tabcontent {
     display: none;
     padding: 6px 12px;
-    border: 1px solid #ccc;
-    border-top: none;
     margin-right:auto;
     margin-left: auto;
   }
@@ -312,6 +317,86 @@ main
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
+}
+
+
+#form-container{
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    background: #111;
+    line-height: 1.8;
+    border-radius: 30px;
+    margin-bottom: 50px;
+}
+#form-container h1{
+    font-size: 20px;
+    margin-top: 20px;
+    text-align: center;
+    color:  white;
+    font-weight: 400;
+}
+#form-container h2{
+    font-size: 20px;
+}
+form{
+    padding: 40px 70px 70px 70px;
+    color:  #999;
+}
+.input1,select{
+    border: none;
+    border-bottom: 1px solid #999;
+    background-color: transparent;
+    font-weight: 400;
+    color:  #999;
+    width: 90%;
+}
+.input2{
+    width: 0px;
+    height: 0px;
+}
+label{
+    color:  #999;
+}
+.radio-label-male{
+    color : white;
+    padding: 5px 8px 4px 8px;
+    border: solid 1px rgb(0, 0, 0);
+    background-color: rgb(25, 52, 126);
+    border-radius: 20px;
+}
+.radio-label-female{
+    color : white;
+    padding: 5px 10px 4px 10px;
+    border: solid 1px rgb(0, 0, 0);
+    background-color: rgb(25, 52, 126);
+    border-radius: 20px;
+}
+.radio-label-male.active ,.radio-label-female.active {
+    background: #4d73f0;
+}
+#submit1,#submit2{
+    color: #fff;
+    background: #925f28;
+    font-weight: bold;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    width: 150px;
+    padding: 10px 20px 10px 20px;
+    margin-left: 30%;
+    font-size: 18px;
+  transition: 1s;
+}
+#submit1:hover , #submit2:hover{
+    transition: 500ms;
+    background: #f38713;
+}
+.submitDiv{
+    margin-top: 20px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 /*--------------------- Footer  --------------------*/
