--- a/css/articles.css
+++ b/css/articles.css
@@ -4,23 +4,49 @@ main{
 main h1 {
     font-size: 35px;
     font-weight: 600;
-    padding: 0 0 20px 30px;
+    padding: 0 0 20px 50px;
 }
 main h3{
     font-size: 25px;
     font-weight: 500;
     padding: 10px 0 10px 15px;
 }
+main h4{
+    font-size: 20px;
+    font-weight: 500;
+    padding: 10px 60px;
+}
 details summary::-webkit-details-marker {
     display:none;
 }
-details summary{
-    cursor: pointer;
+p{
+    width: 70%;
     font-size: 15px;
-    font-weight: 500;
-    line-height: 1.2;
-    margin: 10px 0;
-}
-details p{
+    font-weight: 300;
     line-height: 1.5;
+    text-align: justify;
+    margin: 5px 30px;
+}
+summary{
+    cursor: pointer;
+}
+details{
+    font-size: 15px;
+    font-weight: 300;
+    line-height: 1.5;
+    text-align: justify;
+    margin: 5px 0px;
+}
+h5{
+    font-size: 20px;
+    font-weight: 400;
+    margin: 0 50px;
+}
+details ul{
+    width: 60%;
+    margin: 10px 70px;
+}
+li{
+    list-style-type: disc;
+    list-style-position: inside;
 }
