--- a/css/Cards.css
+++ b/css/Cards.css
@@ -1,84 +1,118 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #d6d6d6;
 
-  }
-  #Art{
-    color: white;
+  background-color: rgb(255, 255, 255);
+
+}
+#Art{
+  margin-top: 30px;
+  margin-bottom: 30px;
+  width: 100%;
+  height: 50px;
+  margin: 50px 0;
+  text-align: center;
+  font-size: 28px;
+  position: relative;
+  background-color: #ffffff;
+}
+
+#Art:after {
+  content: '';
+  width: 20%;
+  border-bottom: solid 1px rgb(0, 0, 0);
+  position: absolute;
+  left: 40%;
+  top: 50%;
+  z-index: 1;
+}
+
+#Art h3 {
+  background-color: #ffffff; /* Same as the parents Background */
+  width: auto;
+  display: inline-block;
+  z-index: 2;
+  padding: 0 20px 0 20px;
+  color: rgb(0, 0, 0);
+  position: relative;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 500;
+  padding-top: 10px;
+  margin: 0;
+}
+
+.articles-container
+{
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card{
+    display: inline-block;
+    margin-top: 40px;
     margin-left: 30px;
-    margin-top: 50px;
-  }
-  .flip-card {
-    background-color: transparent;
-    width: 300px;
-    height: 300px;
-    perspective: 1000px;
-  }
-  
-  
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */   
-  }
-  
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-  
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  
-  .flip-card-front {
-        /*THiS BORDER Ayoub*/
-    /* border: 1px solid blue; */
-    background-color: rgb(255, 255, 255);
-    color: white;
-    box-shadow:
-    0 0 20px 10px #fff,           
-    -5px 0 10px 5px rgba(255, 255, 255, 0.5),        
-    5px 0 10px 5px rgb(255, 255, 255);    
-  }
-  
-  .flip-card-back {
-      /*THiS BORDER Ayoub*/
-    /* border: 1px solid blue; */
-    background-color: #ffffff;
-    color: rgb(0, 0, 0);
-    transform: rotateY(180deg);
-    box-shadow:
-    0 0 20px 10px #fff,           
-    -5px 0 10px 5px rgba(255, 255, 255, 0.5),        
-    5px 0 10px 5px rgb(255, 255, 255);    
-  }
-  #card1{
-   
-      display: inline-block;
-      margin-top: 40px;
-     
-      margin-left: 30px;
-  }
-  #card2{
-  
-    display: inline-block;
-    margin-top: 40px;
-   
-    margin-left: 150px;
-  }
+    width: 29%;
+    margin: 20px;
+    box-shadow: 0 5px 37px rgb(0, 0, 0, 0.5);
+    background: #f7f5ed;
+}
+.card-image
+{
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
+}
+.card-title
+{
 
-  #card3{
-    
-    display: inline-block;
-    margin-top: 40px;
-    margin-left: 150px;
- 
-  }
+  color: #243444;
+  font-family: "Muli", Sans-serif;
+  font-size: 1.4rem;
+  font-weight: bold;
+  text-transform: capitalize;
+  line-height: 1.5em;
+}
+
+.card-content
+{
+  margin-top: 20px;
+  padding: 20px;
+}
+
+.activator
+{
+  width: 100%;
+}
+
+.card-content p
+{
+  margin-top: 20px;
+}
+.card-content a
+{
+    background-color: #ff6600;
+    color: #ffffff;
+    text-decoration: none;
+    display: block;
+    width: 115px;
+    height: 25px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    font-weight: bold;
+    line-height: 25px;
+    font-family: "Muli", Sans-serif;
+    font-size: 0.8rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    fill: #FFFFFF;
+    padding: 10px 15px 10px 15px;
+}
+
+.card-container-text
+{
+  display: block;
+  color: #000000;
+  font-family: "Muli", Sans-serif;
+  line-height: 1.5em;
+}
