--- a/css/style.css
+++ b/css/style.css
@@ -53,20 +53,22 @@ body
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     font-family: Roboto;
-    background-color: #d6d6d6;
+    background-color: #ffffff;
 }
 /* Header Section */
 header
 {
     display: grid;
-    grid-template-columns: 1fr 4fr 4fr 1fr;
+    grid-template-columns: 1fr 2fr 7fr 1fr;
     grid-column: 1/-1;
     background-color: rgb(255, 255, 255);
     position: sticky;
     top: 0;
     height: 100px;
-    background-color: #000000;
+    /* background: rgba(76, 175, 80, 0); */
+    background-color: #0297a6;
     z-index: 3;
+    box-shadow: 0 5px 37px rgb(0, 0, 0, 0.5);
 }
 
 .img-container-header
@@ -98,9 +100,10 @@ header nav a
     font-family: "Founders Grotesk Cond Med",sans-serif;
     text-transform: uppercase;
     text-decoration: none;
+    padding: 5px 30px 5px 20px;
     font-size: 16px;
-    padding: 32px 5px;
-    color: #ffffff; 
+    color: #ffffff;
+    font-weight: 600;
 }
 
 header nav div span
@@ -159,6 +162,8 @@ main
     display: grid;
     grid-template-columns: 1fr;
     grid-column: 1/-1;
+    background-color: #ffffff;
+    margin-bottom: 20px;
 }
 .hero
 {
@@ -168,18 +173,14 @@ main
     border-radius: 0;
     position: relative;
     min-width: 100%;
-    height: 400px;
-}
-#video-hero
-{
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    max-height: 100%;
-    min-width: 100%;
-    object-fit: cover;
-    opacity: 0.7;
-    
+    height: 430px;
+    background-image: url("https://images.pexels.com/photos/1465892/pexels-photo-1465892.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
+    padding: 72px 0px 72px 0px;
 }
 
 @media (max-width: 767px) {
@@ -191,30 +192,60 @@ main
 .hero-text {
     z-index: 2;
     position: absolute;
+    color: #ffffff;
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
+    text-align: center;
     margin-right: auto;
     margin-left: auto;
+    top: 46%;
+    transform: translateY(-50%);
+}
+
+.background-overlay
+{
+    background-color: #0000006b;
+    opacity: 0.8;
+    transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
 }
 
 .hero-text h1
 {
-    font-weight: 600;
-    font-size: 35px;
-    margin: 0 0 20px 0;
-    padding-top: 70px;
-    padding-left: 20px;
-    max-width: 40%;
+    color: #FFFFFF;
+    font-size: 3rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 44px;
 }
 
 .hero-text p
 {
-    font-weight: 400;
-    font-size: 25px;
-    margin: 0 0 20px 0;
-    padding-left: 20px;
-    max-width: 40%;
+    color: #FFFFFF;
+    font-size: 1rem;
+    font-weight: bold;
+    line-height: 39px;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px; 
+    margin-top: 30px;   
+}
+
+.hero-text a
+{
+    font-weight: 600;
+    color: #ffffff;
+    background-color: #ff6600;
+    border-radius: 3px 3px 3px 3px;
+    padding-top: 10px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-left: 40px;
+    text-decoration: none;
 }
 
 /* Articles Section  */
@@ -314,17 +345,77 @@ main
     margin-left: auto;
     margin-right: auto;
     margin-top: 30px;
+    margin-bottom: 30px;
+    height: auto;
 }
+
+/*--------------------- Modal ----------------------*/
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    margin-top: 150px;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
 
 /*--------------------- Footer  --------------------*/
 
 footer
 {
-    background-color: #000000;
+    display: grid;
+    grid-template-columns: 1fr 8fr 2fr;
+    background-color: #0297a6;
     height: auto;
     bottom: 0;
     grid-column: 1/-1;
     text-align: center;
     color: #fff;
     padding: 10px 0;
+    z-index: 4;
+    font-size: 18px;
+    font-weight: 500;
 }
+.copy-rights
+{
+    grid-column: 2/3;
+}
+.footer-link
+{
+    grid-column: 3/4;
+}
+
+
+
