--- a/css/articles.css
+++ b/css/articles.css
@@ -4,28 +4,29 @@ main{
 main h1 {
     font-size: 35px;
     font-weight: 600;
-    padding: 0 0 20px 50px;
+    padding: 20px 0 10px 50px;
 }
 main h3{
     font-size: 25px;
     font-weight: 500;
-    padding: 10px 0 10px 15px;
+    padding: 30px 0 20px 15px;
 }
 main h4{
+    display: inline;
     font-size: 20px;
     font-weight: 500;
-    padding: 10px 60px;
+    padding: 10px 0px;
 }
-details summary::-webkit-details-marker {
+/* details summary::-webkit-details-marker {
     display:none;
-}
+} */
 p{
     width: 70%;
     font-size: 15px;
     font-weight: 300;
     line-height: 1.5;
     text-align: justify;
-    margin: 5px 30px;
+    margin: 5px 0px;
 }
 summary{
     cursor: pointer;
@@ -49,4 +50,25 @@ details ul{
 li{
     list-style-type: disc;
     list-style-position: inside;
+}
+.catImg{
+    height: 150px;
+    width: 200px;
+    object-fit: cover;
+    padding: 5px;
+    margin-left: 30px;
+    box-shadow: 3px 3px 5px 2px #dddddd;
+}
+#chronic, #baby, #diet{
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    gap: 30px;
+}
+.img{
+    width: 50%;
+    height: 100%;
+    object-fit: cover;
+    padding: 10px;
+   margin: 30px 50px;
+    box-shadow: 5px 5px 10px 4px #dddddd;
 }
