--- a/css/Cards.css
+++ b/css/Cards.css
@@ -115,4 +115,7 @@ body {
   color: #000000;
   font-family: "Muli", Sans-serif;
   line-height: 1.5em;
+  height: 100px;
+  overflow-y: hidden;
+
 }
