--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,40 @@ main
     margin-bottom: 30px;
     height: auto;
 }
+#contact{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    width: 100%;
+    height: 50px;
+    margin: 50px 0;
+    text-align: center;
+    font-size: 28px;
+    position: relative;
+    background-color: #ffffff;
+}
+#contact:after {
+    content: '';
+    width: 20%;
+    border-bottom: solid 1px rgb(0, 0, 0);
+    position: absolute;
+    left: 40%;
+    top: 50%;
+    z-index: 1;
+  }
+  #contact h3{
+    background-color: #ffffff; /* Same as the parents Background */
+    width: auto;
+    display: inline-block;
+    z-index: 2;
+    padding: 0 20px 0 20px;
+    color: rgb(0, 0, 0);
+    position: relative;
+    text-align: center;
+    font-size: 32px;
+    font-weight: 500;
+    padding-top: 10px;
+    margin: 0;
+  }
 .contact-container{
     width: 70%;
     margin-left: auto;
