--- a/css/contact-form.css
+++ b/css/contact-form.css
@@ -9,6 +9,37 @@
   position: relative;
   background-color: #ffffff;
 }
+#contact:after {
+  content: '';
+  width: 20%;
+  border-bottom: solid 1px rgb(0, 0, 0);
+  position: absolute;
+  left: 40%;
+  top: 50%;
+  z-index: 1;
+}
+#contact h3{
+  background-color: #ffffff; /* Same as the parents Background */
+  width: auto;
+  display: inline-block;
+  z-index: 2;
+  padding: 0 20px 0 20px;
+  color: rgb(0, 0, 0);
+  position: relative;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 500;
+  padding-top: 10px;
+  margin: 0;
+}
+.contact-container{
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0px;
+  margin-bottom: 70px;
+  height: auto;
+}
 input[type=text], select, textarea {
     width: 100%;
     padding: 12px;
@@ -36,7 +67,7 @@ input[type=text], select, textarea {
   .contact-container
   {
       border-radius: 8px;
-      box-shadow: 0 5px 37px rgb(0, 0, 0, 0.5);
+      box-shadow: 5px 5px 10px 2px #888888;
       background: #f7f5ed;
       padding: 20px;
   }
