--- a/css/qouteCss.css
+++ b/css/qouteCss.css
@@ -1,7 +1,7 @@
 .container{
 
     width: 75%;
-    margin: 10% auto;
+    margin: 30px auto 50px auto;
     box-shadow: 5px 5px 10px 2px #888888;
 }
 
