--- a/css/style.css
+++ b/css/style.css
@@ -64,11 +64,11 @@ header
     background-color: rgb(255, 255, 255);
     position: sticky;
     top: 0;
-    height: 100px;
+    height: 70px;
     /* background: rgba(76, 175, 80, 0); */
     background-color: #0297a6;
     z-index: 3;
-    box-shadow: 0 5px 37px rgb(0, 0, 0, 0.5);
+    box-shadow: 5px 5px 20px 5px #88888870;
 }
 
 .img-container-header
@@ -348,48 +348,7 @@ main
     margin-bottom: 30px;
     height: auto;
 }
-#contact{
-    margin-top: 30px;
-    margin-bottom: 30px;
-    width: 100%;
-    height: 50px;
-    margin: 50px 0;
-    text-align: center;
-    font-size: 28px;
-    position: relative;
-    background-color: #ffffff;
-}
-#contact:after {
-    content: '';
-    width: 20%;
-    border-bottom: solid 1px rgb(0, 0, 0);
-    position: absolute;
-    left: 40%;
-    top: 50%;
-    z-index: 1;
-  }
-  #contact h3{
-    background-color: #ffffff; /* Same as the parents Background */
-    width: auto;
-    display: inline-block;
-    z-index: 2;
-    padding: 0 20px 0 20px;
-    color: rgb(0, 0, 0);
-    position: relative;
-    text-align: center;
-    font-size: 32px;
-    font-weight: 500;
-    padding-top: 10px;
-    margin: 0;
-  }
-.contact-container{
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    height: auto;
-}
+
 /*--------------------- Modal ----------------------*/
 
 .modal {
