--- a/css/AboutCards.css
+++ b/css/AboutCards.css
@@ -10,14 +10,15 @@
 }
 
 .card {
-  background-color: #222831;
+  background-color: #f7f5ed;
   height: auto;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: rgba(0, 0, 0, 0.7);
-  color: white;
+box-shadow: 2px 2px 5px 2px #888888;
+
+  color: rgb(0, 0, 0);
 }
 
 .card__name {
@@ -29,9 +30,9 @@
   height: 160px;
   width: 160px;
   border-radius: 50%;
-  border: 5px solid #272133;
+ 
   margin-top: 20px;
-  box-shadow: 0 10px 50px rgb(255, 255, 255);
+  box-shadow: 1px 0px 5px 2px rgba(0, 0, 0,0.5);
 }
 
 
@@ -140,7 +141,7 @@
   height: 45px;
   border-radius: 100%;
   display: block;
-  background: linear-gradient(45deg, #000000, #000000);
+  background: linear-gradient(45deg, #ff6600, #ff6600);
   transition: all 265ms ease-out;
 }
 
