--- a/css/Cards.css
+++ b/css/Cards.css
@@ -54,7 +54,7 @@ body {
     width: 29%;
     margin: 20px;
     box-shadow: 5px 5px 10px 2px #888888;
-    background: #f7f5ed;
+    background: #ffffff;
 }
 .card-image
 {
