--- a/css/form.css
+++ b/css/form.css
@@ -149,3 +149,33 @@ h2{
 p{
     font-size: 18px;
 }
+
+
+
+table{
+    margin-left: 200px;
+border:2px solid black;
+margin-bottom: 10px;
+margin-top: 15px;
+/* border-collapse: collapse; */
+}
+
+th{
+    padding: 13px;
+    border:1px solid black;
+/* border-collapse: collapse; */
+}
+
+td{
+    padding: 10px;
+    border:1px solid black;
+}
+#Results{
+    display: block;
+    margin-left: 50px;
+    margin-bottom: 15px;
+line-height: 30px;
+}
+h3{
+    margin-left: 200px;
+}
