--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     font-family: Roboto;
-    background-color: #ffffff;
+    background-color:  #f7f5ed !important;
 }
 /* Header Section */
 header
@@ -162,7 +162,7 @@ main
     display: grid;
     grid-template-columns: 1fr;
     grid-column: 1/-1;
-    background-color: #ffffff;
+      background-color:  #f7f5ed !important;
     margin-bottom: 20px;
 }
 .hero
