--- a/css/qouteCss.css
+++ b/css/qouteCss.css
@@ -1,5 +1,5 @@
 .container{
-
+    position: relative;
     width: 75%;
     margin: 45px auto 0px auto;
     box-shadow: 0px 1px 1px 0px #888888;
@@ -13,6 +13,7 @@
     overflow: hidden;
 }
 .slider{
+ background-color: #f5f4f4;
     height: 100%;
     display: flex;
     width: 400%;
@@ -46,4 +47,50 @@
 
 .cont .Arr:hover{
     opacity: 1;
+}
+
+#text1 {
+    margin-left: 5%;
+    
+    font-size: 15px;
+    margin-top: 1%;
+    font-style:italic;
+    font-family: cursive;
+}
+
+#text2 {
+    margin-left: 5%;
+    font-size: 15px;
+    margin-top: 1%;
+    font-style:italic;
+    font-family: cursive;
+}
+
+#text3 {
+    margin-left: 5%;
+    font-size: 15px;
+    margin-top: 1%;
+    font-style:italic;
+    font-family: cursive;
+}
+
+#text4 {
+    margin-left: 5%;
+    font-size: 15px;
+    margin-top: 1%;
+    font-style:italic;
+    font-family: cursive;
+}
+
+.qputimg{
+
+    margin-left: 70px;
+}
+
+.container span{
+
+color: #0297a6;
+}
+#quoteSign{
+    position: absolute;
 }
