--- a/css/articles.css
+++ b/css/articles.css
@@ -1,41 +1,105 @@
-main{
-    padding: 50px;
+*, *:before, *:after {
+    box-sizing: border-box;
 }
-main h1 {
+main{
+    padding: 50px 50px 0 50px;
+    background-color: #f7f5ed;
+}
+#main{
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+}
+h1 {
     font-size: 35px;
     font-weight: 600;
-    padding: 20px 0 10px 50px;
+    text-align: center;
 }
-main h3{
+
+/* ---sidebar--- */
+
+aside{
+    background-color: #ff6600;
+    position: fixed;
+    top: 90px;
+    left: 20px;
+    width: 22%;
+    padding: 30px;
+    padding-left: 50px;
+    max-height: 520px;
+    max-width: 300px;
+}
+aside a{
+    color: black;
+    text-decoration: none;
+}
+aside h3{
+    text-decoration: underline;
+    font-size: 20px;
+    font-weight: 400;
+    margin: 0 14px;
+    padding: 15px 0 15px 0;
+}
+aside h4{
+    display: inline;
+    width: 250px;
+    font-size: 16px;
+    font-weight: 300;
+    text-align: left;
+    line-height: 1.8;
+}
+aside h4:hover{
+    border-bottom: 3px solid #af4f0f;
+}
+aside h4:in-range{
+    border-bottom: 3px solid #af4f0f;
+}
+aside li{
+    list-style-type: disc;
+    list-style-position: outside;
+}
+/* ---articles--- */
+#content{
+    grid-column: 2/-1;
+    place-items:center;
+    margin: 30px 0 0 0;
+}
+#content h3{
+    display: inline;
+    position: relative;
+    top: -30px;
+    padding: 10px;
+    border: 3px solid #ff6600;
+    margin:30px;
+    font-size: 25px;
+    font-weight: 600;
+}
+#content h4{
+    display: block;
     font-size: 25px;
     font-weight: 500;
-    padding: 30px 0 20px 15px;
+    text-align: center;
+    line-height: 1.8;
+    margin: auto;
 }
-main h4{
-    display: inline;
-    font-size: 20px;
-    font-weight: 500;
-    padding: 10px 0px;
+.article{
+    background-color: white;
+    margin-bottom: 60px;
+    padding: 30px;
 }
-/* details summary::-webkit-details-marker {
-    display:none;
-} */
+.img{
+    float: left;
+    width: 50%;
+    height: 250px;
+    object-fit: cover;
+    padding: 0 15px 15px 0;
+    margin: auto;
+}
 p{
-    width: 70%;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 300;
     line-height: 1.5;
     text-align: justify;
-    margin: 5px 0px;
-}
-summary{
-    cursor: pointer;
-}
-details{
-    font-size: 15px;
-    font-weight: 300;
-    line-height: 1.5;
-    text-align: justify;
+    padding: 10px;
     margin: 5px 0px;
 }
 h5{
@@ -43,32 +107,23 @@ h5{
     font-weight: 400;
     margin: 0 50px;
 }
-details ul{
-    width: 60%;
-    margin: 10px 70px;
+h6{
+    float: right;
+    padding: 5px;
+    color: #888888;
+    border: 1px dashed #dddddd;
+    border-radius: 5px;
+    margin-right: 10px;
 }
-li{
+.content ul{
+    margin: 0px 90px 10px 70px;
+}
+.content li{
     list-style-type: disc;
     list-style-position: inside;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.5;
+    margin: 5px 0px;
 }
-.catImg{
-    height: 150px;
-    width: 200px;
-    object-fit: cover;
-    padding: 5px;
-    margin-left: 30px;
-    box-shadow: 3px 3px 5px 2px #dddddd;
-}
-#chronic, #baby, #diet{
-    display: grid;
-    grid-template-columns: 1fr 4fr;
-    gap: 30px;
-}
-.img{
-    width: 50%;
-    height: 100%;
-    object-fit: cover;
-    padding: 10px;
-   margin: 30px 50px;
-    box-shadow: 5px 5px 10px 4px #dddddd;
-}
+
