--- a/css/form.css
+++ b/css/form.css
@@ -6,7 +6,7 @@
     margin-left: auto;
     border-bottom-left-radius: 0px  ;
     border-bottom-right-radius: 0px  ;
-    border-top-left-radius: 5px  ;
+    border-top-left-radius: 0px  ;
     border-top-right-radius: 5px  ;
     /* border-radius:  10px; */
   
@@ -34,6 +34,7 @@
   .tab button:hover {
     background-color: #067d88;
     color: #fff;
+    border-top-left-radius: 0px ;
   }
   
   /* Create an active/current tablink class */
@@ -42,6 +43,7 @@
     color: #fff;
     border-bottom-left-radius: 0px  ;
     border-bottom-right-radius: 0px  ;
+    border-top-left-radius: 0px ;
 
   }
  
@@ -55,13 +57,9 @@
      display: none;
  }
 
-/*.main-container
-{
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-}*/
+ main{
+    background-color: rgb(247 245 237);
+ }
 
 
 #form-container{
@@ -71,7 +69,8 @@
     /* margin-top: 30px; */
     background: #023933;
     line-height: 1.8;
-    border-radius: 10px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px ;
   
     /* margin-bottom: 50px; */
 }
@@ -151,21 +150,28 @@ h1{
     text-align: center;
     font-size: 32px;
     font-weight: 900;
+    line-height: 1.1;
 }
-h2{
-    font-size: 25px;
+.Textintro h2{
+    border-bottom: 1px solid black;
+    font-size: 20px;
     font-weight: 500;
+    line-height: 1.8;
 }
 p{
-    font-size: 18px;
+    font-size: 16px;
+    line-height: 1.2;
+    margin-top: 5px;
 }
 
 
 
 table{
-    margin-left: 200px;
+    margin-left: 40px;
+    display: inline-block;
+margin-right: 0px;
 border:2px solid black;
-margin-bottom: 10px;
+margin-bottom: 25px;
 margin-top: 15px;
  border-collapse: collapse; 
 }
@@ -197,33 +203,73 @@ tr:nth-of-type(3){
 
     background-color: white;
 }
-#Results{
-    display: block;
-    margin-left: 50px;
-    margin-bottom: 15px;
-line-height: 30px;
-}
 h3{
-    margin-left: 200px;
+   
+    margin-left: 40px;
+}
+
+h4{
+    margin-top: 25px ;
+    margin-left: 40px;
+   font-size: 22px; 
+   font-weight: 500;
 }
 
 #Main{
-
+   position: relative;
     display: grid;
     grid-template-columns: 4fr 3fr ;
 }
 #form-container{
-
 grid-column: 2/3;
 }
-.Textintro{
+#text1{
+    border: 2px solid black;
     grid-column: 1/2;
+    background: #CDD4DC;
+    padding-right: 30px;
+}
+.Textintro{
+    margin-top: 30px;
+    margin-left: 30px;
+   
 }
 
-#ActivityAdults{
+#ActivityChildren{
+    margin-bottom: 24px;
+}
+#ActivityAdults , #ActivityChildren{
     color: rgb(0, 0, 0);
+}
+#AgeChildren{
+    color: black;
 }
 #ActivityAdults:active{
 
     color: white;
+}
+#Results{
+    
+    background-color: #cdd4dc;
+    width: 105%;
+    opacity: 1 !important;
+    display: block;
+    line-height: 30px;
+}
+#popup{
+    opacity: 1 !important;
+   position: absolute;
+    left: 300px;
+    top: 200px;
+}
+#closebtn{
+    color: white;
+    font-size: 15px;
+    margin-left: 95%;
+    margin-top: 10px;
+    border: 0px;
+    border-radius: 50px;
+    background-color: red;
+    width: 25px;
+    height: 25px;
 }
