--- a/css/articles.css
+++ b/css/articles.css
@@ -13,12 +13,13 @@ h1 {
     font-size: 35px;
     font-weight: 600;
     text-align: center;
+    color: #023933;
 }
 
 /* ---sidebar--- */
 
 aside{
-    background-color: #ff6600;
+    background-color: #24978a;
     position: fixed;
     top: 90px;
     left: 20px;
@@ -48,10 +49,7 @@ aside h4{
     line-height: 1.8;
 }
 aside h4:hover{
-    border-bottom: 3px solid #af4f0f;
-}
-aside h4:in-range{
-    border-bottom: 3px solid #af4f0f;
+    border-bottom: 3px solid #023933;
 }
 aside li{
     list-style-type: disc;
