--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ header
     /* background: rgba(76, 175, 80, 0); */
     background-color: #0297a6;
     z-index: 3;
-    box-shadow: 5px 5px 20px 5px #88888870;
+    box-shadow: 0px 1px 7px 4px #848484;
 }
 
 .img-container-header
