--- a/css/articles.css
+++ b/css/articles.css
@@ -1,6 +1,9 @@
 *, *:before, *:after {
     box-sizing: border-box;
 }
+body{
+    background-color: #f7f5ed;
+}
 main{
     padding: 50px 50px 0 50px;
     background-color: #f7f5ed;
@@ -11,34 +14,33 @@ main{
 }
 h1 {
     font-size: 35px;
-    font-weight: 600;
+    font-weight: 500;
     text-align: center;
     color: #023933;
+    margin-bottom: 20px;
 }
 
 /* ---sidebar--- */
 
 aside{
-    background-color: #24978a;
     position: fixed;
-    top: 90px;
-    left: 20px;
+    top: 70px;
+    left: 10px;
+    height: 100%;
     width: 22%;
-    padding: 30px;
-    padding-left: 50px;
-    max-height: 520px;
+    padding: 30px 15px 30px 30px;
+    /* padding-left: 30px; */
     max-width: 300px;
+    border-right: 2px solid #0239339c;
 }
 aside a{
     color: black;
     text-decoration: none;
 }
 aside h3{
-    text-decoration: underline;
     font-size: 20px;
     font-weight: 400;
-    margin: 0 14px;
-    padding: 15px 0 15px 0;
+    padding: 15px 0;
 }
 aside h4{
     display: inline;
@@ -49,9 +51,10 @@ aside h4{
     line-height: 1.8;
 }
 aside h4:hover{
-    border-bottom: 3px solid #023933;
+    border-bottom: 1px solid #023933;
 }
 aside li{
+    color: #023933;
     list-style-type: disc;
     list-style-position: outside;
 }
@@ -62,11 +65,11 @@ aside li{
     margin: 30px 0 0 0;
 }
 #content h3{
-    display: inline;
+    display: block;
     position: relative;
     top: -30px;
     padding: 10px;
-    border: 3px solid #ff6600;
+    border-bottom: 2px dashed #ff6600;
     margin:30px;
     font-size: 25px;
     font-weight: 600;
