--- a/css/form.css
+++ b/css/form.css
@@ -224,7 +224,9 @@ h4{
 grid-column: 2/3;
 }
 #text1{
-    border: 2px solid black;
+    border: 2px dashed black;
+border-bottom-left-radius: 5%;
+border-top-left-radius: 5%;
     grid-column: 1/2;
     background: #CDD4DC;
     padding-right: 30px;
@@ -238,16 +240,24 @@ grid-column: 2/3;
 #ActivityChildren{
     margin-bottom: 24px;
 }
-#ActivityAdults , #ActivityChildren{
+#ActivityAdults , #ActivityChildren , #AgeChildren{
     color: rgb(0, 0, 0);
-}
-#AgeChildren{
-    color: black;
-}
-#ActivityAdults:active{
-
-    color: white;
-}
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 1.3;
+    box-sizing: border-box;
+    border-radius: .5em;
+    /*appearance: none;*/
+    background-color: #023933;
+  }
+  option{
+      font-size: 15px;
+  }
+  #ActivityAdults:focus , #ActivityChildren:focus ,#AgeChildren:focus {
+      border-color: #24978A;
+      color: #000000;
+      outline: none;
+  }
 #Results{
     
     background-color: #cdd4dc;
@@ -276,4 +286,3 @@ grid-column: 2/3;
 #closebtn:hover{
 cursor:pointer;
 }
-
